--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>About</h1>
-    <p>slkhjasdkjhasdfkjlh</p>
+    <nav>
+      <a>Home</a>
+      <a>About</a>
+      <a>Contact</a>
+    </nav>
   </body>
 </html>
