--- a/contact-me.html
+++ b/contact-me.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    Contact me
+    <nav>
+      <a>Home</a>
+      <a>About</a>
+      <a>Contact</a>
+    </nav>
   </body>
 </html>
