--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Index</h1>
+    <nav>
+      <a>Home</a>
+      <a>About</a>
+      <a>Contact</a>
+    </nav>
   </body>
 </html>
